--- a/index.html
+++ b/index.html
@@ -7,32 +7,38 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/base.css">
-    <style>
-        * {
-            margin: 0;
-        }
-        .box {
-            width: 60px;
-            height:60px;
-            color: #fff;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .box1 {
-            background-color: #333;
-        }
-        .box2 {
-            background-color:orange;
-        }
-        .box3 {
-            background-color:red;
-        }
-    </style>
 </head>
+
 <body>
-    <div class="box box1">Box 1</div>
-    <div class="box box2">Box 2</div>
-    <div class="box box3">Box 3</div>
+    <div id="main">
+        <div id="header">
+            <ul id="nav">
+                <li><a href="">Home</a></li>
+                <li><a href="">Band</a></li>
+                <li><a href="">Tour</a></li>
+                <li><a href="">Contact</a></li>
+                <li>
+                    <a href="#">More</a>
+                    <ul class="subnav">
+                        <li><a href="">Merchandise</a></li>
+                        <li><a href="">Extras</a></li>
+                        <li><a href="">Media</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+
+        <div id="slider">
+
+        </div>
+
+        <div id="content">
+
+        </div>
+
+        <div id="footer">
+
+        </div>
+    </div>
 </body>
 </html>
