--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="https://www.w3schools.com/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/base.css">
-    <link rel="stylesheet" href="/assets/css/responsive.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
 </head>
 
@@ -168,7 +168,7 @@
                                     <input type="text" class="form-control" required placeholder="Message">
                                 </div>
                             </div>
-                            <input class="pull-right btn mt-16 s-full-width" type="submit" value="SEND">
+                            <input class="contact-submit-btn pull-right btn mt-16 s-full-width" type="submit" value="SEND">
                         </form>
                     </div>
                 </div>
